aws_FinTech_MobileBanking_Application/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fintech
  labels:
    name: fintech
    istio-injection: enabled
